# decmpfs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.claude/reports/: quality-scan-2026-07-08.md
.config/: socket-wheelhouse.json
.git-hooks/: pre-commit  pre-push
.github/actions/release-app-token/: action.yml  mint-app-installation-token.mjs
.github/actions/repo/release-app-token/: mint-app-installation-token.mts
.github/actions/repo/setup-pnpm/: install-tool.mjs
.github/workflows/: cargo-publish.yml  ci.yml  provenance.yml  publish-npm.yml
assets/brand/: README.md  combomark.mts
assets/repo/: preview.html
ci/: Dockerfile  run.sh
crates/decmpfs/: .gitignore  Cargo.toml
crates/decmpfs/ci/: .gitattributes  Dockerfile.dockerignore  btrfs-loopback.sh
crates/decmpfs/src/: addon.rs  gate.rs  lib.rs  linux.rs  macos.rs  remove.rs  safety.rs  unsupported.rs  verify.rs  windows.rs
crates/decmpfs/src/exe/: inject.rs  mod.rs  replace.rs  section.rs
crates/decmpfs/tests/common/: mod.rs
fuzz/: Cargo.toml  fuzz.dict  run.sh
fuzz/corpus/gate_glob/: path-bare-node  path-node-addon  path-non-match
fuzz/corpus/gate_parse/: spec-atleast-mb  spec-gt-bytes  spec-kib  spec-separators
fuzz/fuzz_targets/: gate_glob.rs  gate_parse.rs
napi/decmpfs/: .gitignore  Cargo.toml  index.cjs  index.d.cts  package.json  tsconfig.json
napi/decmpfs/scripts/: build.mts  make-npm-dirs.mts  make-placeholders.mts  targets.mts
napi/decmpfs/src/: lib.rs
napi/decmpfs/test/: copy.test.mts  dts.test.mts  exe.test.mts  stat.test.mts  write.test.mjs  write.test.mts
napi/decmpfs/type-tests/: uses-api.ts
node/: .gitignore  index.cjs  package.json
node/scripts/: make-npm-dirs.mts  targets.mts
scripts/: check.mjs  check.mts  coverage.mts  install-git-hooks.mjs  install-git-hooks.mts  lint.mjs  release.mjs
scripts/fleet/check/: lockstep-mirror-markers-are-declared.mts
scripts/repo/: coverage.mts  lint.mts  release-lib.mts  release-lib.test.mts  release.mts  test.mts
src/: lib.rs  linux.rs  macos.rs  safety.rs  unsupported.rs  verify.rs  windows.rs
test/unit/: release-lib.test.mts
tests/: btrfs.rs
