[package]
name = "decmpfs"
version = "0.1.0"
edition = "2021"
description = "Apply OS-level transparent filesystem compression (APFS decmpfs / btrfs / NTFS) to a file in place."
license = "MIT"
repository = "https://github.com/jdalton/decmpfs"
keywords = ["apfs", "btrfs", "compression", "decmpfs", "ntfs"]
categories = ["filesystem"]

# Backend syscalls, cfg-gated so non-target builds stay dep-free. Linux (btrfs
# ioctls) and macOS (statfs/xattr/chflags + libcompression) both use libc.
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
] }
