[package]
name = "decmpfs"
version = "0.1.0"
edition = "2021"
description = "Apply OS-level transparent filesystem compression (APFS decmpfs / btrfs / NTFS) to a file in place."
license = "MIT"
repository = "https://github.com/decmpfs/decmpfs"
keywords = ["apfs", "btrfs", "compression", "decmpfs", "ntfs"]
categories = ["filesystem"]

[features]
# Off by default — the FS-compression core has no codec dep. The `addon` feature
# pulls zstd + sha2 to unwrap a napi `--compress` hybrid back to the raw .node.
default = []
addon = ["dep:zstd", "dep:sha2"]

[dependencies]
# Only the `addon` feature codec/integrity deps; the core stays dep-free.
zstd = { version = "=0.13.3", optional = true }
sha2 = { version = "=0.10.9", optional = true }

# Backend syscalls, cfg-gated so non-target builds stay dep-free. Linux (btrfs
# ioctls) and macOS (statfs/xattr/chflags + libcompression) both use libc.
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "=0.2.186"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.59.0", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
] }
